nuggets-6 Parse exception without causes or suppressed from stacktrace